# rkbdb2xml

./: .gitignore  .windsurfrules  LICENSE  README.md  TODO.md  compare_tracks.py  compare_xml.py  dump_db_tables.py  dump_db_tables_sqlite.py  pyproject.toml  requirements.txt  todo-export.md
doc/: GUI_PLAN.md  GUI_PLAN_JA.md
rkbdb2xml/: __init__.py  cli.py  rkbdb2xml.py
rkbdb2xml_gui/: main.py
tests/: test_bpm_conversion.py  test_functional.py  test_integration.py  test_orderby_bpm.py  test_romanization.py  test_track_file_path.py  test_xml_output_compare.py
tests/data/: rekordbox_test.db  test_rkb6_export.xml
